[MSFS] - Use a NULL timeout for infinite waits instead of waiting for 100 ns. CORE-10188 #resolve - Wait for available read data in user mode to handle thread termination - Return STATUS_IO_TIMEOUT also for a zero-length timeout. Fixes Wine tests - Avoid MmGetSystemAddressForMdl - Acquiring a mutex is not a UserRequest

svn path=/trunk/; revision=69236